[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/buton.tscn" type="PackedScene" id=1]
[ext_resource path="res://visuals/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://visuals/Poppins-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/visuals/app_theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/download_popup.gd" type="Script" id=5]
[ext_resource path="res://visuals/icons/cross.png" type="Texture" id=6]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(-2.0, 10.0);
uniform float mix_amount : hint_range(0.0, 1.0);
uniform vec4 color_over : hint_color;

void fragment() {
	vec4 blurred = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
	vec4 fin = mix(blurred, color_over, mix_amount);
	COLOR = fin;
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )
shader_param/blur_amount = 1.343
shader_param/mix_amount = 0.471
shader_param/color_over = Color( 0.113725, 0.105882, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.203922, 0.231373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.180392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="DynamicFont" id=14]
size = 23
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 34
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.345098, 0.839216, 0.74902, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.235294, 0.564706, 0.505882, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.427451, 0.427451, 0.447059, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.345098, 0.839216, 0.74902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DownloadPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 19 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -203.5
margin_right = 304.0
margin_bottom = 203.5

[node name="Background" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 608.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Download a Godot version"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="Control/VBoxContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )

[node name="CloseBtn" type="TextureButton" parent="Control/VBoxContainer/Label"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -19.5
margin_bottom = 20.5
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="ContentMargin" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 69.0
margin_right = 608.0
margin_bottom = 407.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/ContentMargin"]
margin_left = 20.0
margin_top = 25.0
margin_right = 588.0
margin_bottom = 302.0
size_flags_vertical = 4
custom_constants/separation = 35

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer"]
margin_right = 568.0
margin_bottom = 34.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6"]
margin_left = 115.0
margin_right = 218.0
margin_bottom = 34.0
custom_constants/separation = 10

[node name="Alpha" type="CheckBox" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 34.0
theme = ExtResource( 4 )
pressed = true

[node name="Label" type="Label" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer2"]
margin_left = 34.0
margin_right = 103.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Alpha"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6"]
margin_left = 238.0
margin_right = 325.0
margin_bottom = 34.0
custom_constants/separation = 10

[node name="Beta" type="CheckBox" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 34.0
pressed = true

[node name="Label" type="Label" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer3"]
margin_left = 34.0
margin_right = 87.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Beta"
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6"]
margin_left = 345.0
margin_right = 453.0
margin_bottom = 34.0
custom_constants/separation = 10

[node name="Stable" type="CheckBox" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer4"]
margin_right = 24.0
margin_bottom = 34.0
pressed = true

[node name="Label" type="Label" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer4"]
margin_left = 34.0
margin_right = 108.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Stable"
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer"]
margin_top = 69.0
margin_right = 568.0
margin_bottom = 177.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/VBoxContainer2"]
margin_right = 568.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Choose version"
align = 1
valign = 1

[node name="VersionBtn" type="OptionButton" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 568.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer/ContentMargin/VBoxContainer"]
margin_top = 212.0
margin_right = 568.0
margin_bottom = 277.0
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 2

[node name="DownloadBtn" parent="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer5" instance=ExtResource( 1 )]
margin_left = 268.0
margin_right = 568.0
rect_min_size = Vector2( 300, 65 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 17 )
text = "DOWNLOAD v3.4.3"

[connection signal="pressed" from="Control/VBoxContainer/Label/CloseBtn" to="." method="_on_CloseBtn_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer2/Alpha" to="." method="_on_Alpha_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer3/Beta" to="." method="_on_Beta_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer6/HBoxContainer4/Stable" to="." method="_on_Stable_toggled"]
[connection signal="item_selected" from="Control/VBoxContainer/ContentMargin/VBoxContainer/VBoxContainer2/VersionBtn" to="." method="_on_VersionBtn_item_selected"]
[connection signal="pressed" from="Control/VBoxContainer/ContentMargin/VBoxContainer/HBoxContainer5/DownloadBtn" to="." method="_on_DownloadBtn_pressed"]
